--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
   "dependencies": {
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "next": "15.5.3"
+    "next": "15.5.3",
+    "recharts": "^3.2.1",
+    "axios": "^1.12.2",
+    "lightweight-charts": "^5.0.8"
   },
   "devDependencies": {
     "typescript": "^5",
