--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,1 @@
-ALLOWED_ORIGINS=http://localhost:3000,https://your-vercel-app.vercel.app
+ALLOWED_ORIGINS=http://localhost:3000,https://xedni-sandbox.vercel.app/
